syntax = "proto3";

 // Email address information
message EmailData {
    string email = 1;
    optional string name = 2;
}